--- a/src/Iot.Greenhouse.DbMigrator/appsettings.json
+++ b/src/Iot.Greenhouse.DbMigrator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=Greenhouse;Trusted_Connection=True;TrustServerCertificate=True"
+    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=IotGreenhouse;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "OpenIddict": {
     "Applications": {
