--- a/src/Iot.Greenhouse.Blazor/Iot.Greenhouse.Blazor.csproj
+++ b/src/Iot.Greenhouse.Blazor/Iot.Greenhouse.Blazor.csproj
@@ -17,11 +17,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BlazorAnimate" Version="3.0.0" />
     <PackageReference Include="Blazorise.Bootstrap5" Version="1.4.1" />
     <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.4.1" />
     <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components" Version="4.4.1" />
     <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components.Icons" Version="4.4.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
+    <PackageReference Include="MQTTnet.Extensions.ManagedClient" Version="4.3.3.952" />
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.0" />
     <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
     <PackageReference Include="Syncfusion.Blazor.Charts" Version="24.2.8" />
