--- a/src/Iot.Greenhouse.Blazor/appsettings.json
+++ b/src/Iot.Greenhouse.Blazor/appsettings.json
@@ -4,7 +4,7 @@
     "RedirectAllowedUrls": "https://localhost:44342"
   },
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=Greenhouse;Trusted_Connection=True;TrustServerCertificate=True"
+    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=IotGreenhouse;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "AuthServer": {
     "Authority": "https://localhost:44342",
